--- a/index.html
+++ b/index.html
@@ -21,8 +21,7 @@
 
 
 <!-- FontAwesome Css -->
-<link href="//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css" rel="stylesheet">
-<link rel="stylesheet" href="./css/font-awesome.min.css">
+<link rel="stylesheet" href="./css/font-awesome.min-all.css">
 <!-- Line icon Css -->
 <link rel="stylesheet" href="./css/LineIcons.css">
 <!-- Bootstrap Css -->
