--- a/index.html
+++ b/index.html
@@ -385,10 +385,10 @@
                                 <div class="hero-content">
                                     <h1 class="dark-color mb-3">I'M <span class="base-color">Tyavyar Terhide</span></h1>
                                     <h4 class="text-darktext-capitalize mb-0"><span class="base-color">A  </span> <span class="element" data-elements="Web Designer.,Web Developer.,UI/UX Designer,Graphics Designer,Javascript Programmer.">Designer</span><span class="typed-cursor">|</span></h4>
-                                    <p class="text-muted my-4">I'm a Web Developer currently working as a Web Developer, UI UX / Graphics Designer at <a href="https://www.gamintcorporateltd.com/">Gamint Corporate Ltd</a> I have spent the past years at agencies,
+                                    <p class="text-muted my-4">I'm currently working as a Web Developer, UI UX / Graphics Designer at <a href="https://www.gamintcorporateltd.com/">Gamint Corporate Ltd</a> I have spent the past years at agencies,
                                         start-ups and freelancing, designing and building scalable applications.</p>
                                     <div class="button-border mt-2">
-                                        <a target="_blank" href="mycv/terhide cv.pdf" class="pill-button">Download My CV</a>
+                                        <a target="_blank" href="mycv/terhide cv.pdf" class="pill-button">My Resume</a>
                                     </div>
                                 </div>
                             </div>
@@ -474,7 +474,7 @@
                                     </div>
                                 </div>
                                 <div class="button-border mt-3 mb-lg-0 mr-4">
-                                    <a target="_blank" href="mycv/terhide cv.pdf" class="pill-button">Download My CV</a>
+                                    <a target="_blank" href="mycv/terhide cv.pdf" class="pill-button">My Resume</a>
                                 </div>
                                 <div class="button-border mt-3 mb-lg-0 to-contact">
                                     <a href="#contact" class="pill-button">Hire Me</a>
@@ -819,7 +819,7 @@
                                         <img src="svg/support.svg" alt="/">
                                         <h5 class="text-dark">IT Consultancy</h5>
                                         <p class="text-muted mb-0">I train, coach and mentor intending developers both Kids, 
-                                            Teens and Adult to help them actualize their dream as a web Developer / Graphic Designer.</p>
+                                            Teens and Adult to help them actualize their dream as a Web Developer / Graphic Designer.</p>
                                     </div>
                                 </div>
                             </div>
@@ -1178,7 +1178,7 @@ He exceeded my expectations with the deliverables, providing more that what was 
                                                  to set up my Portfolio Website.
  the aesthetics, user interface and excellence are sincerely mind blowing... 
  Thanks a lot for doing such a great job!"</p>
-                                        <span class="d-block font-weight-bold text-dark mt-3">Orsar Yaweh, <small class="text-muted"> CEO / MD - Pure Graphix</small></span>
+                                        <span class="d-block font-weight-bold text-dark mt-3">Orsar Yaweh, <small class="text-muted"> CEO/MD - Pure Graphix</small></span>
                                     </div></div><div class="owl-item" style="width: 490px; margin-right: 30px;"><div class="testimonial-item box-border" style="text-align: justify; line-height:1.2;">
                                         <div class="testimonial-image">
                                             <div class="testimonial-image-border">
@@ -1202,7 +1202,7 @@ a knack for successfully delivering functional designs in both areas".
                                             <p class="mb-0 mt-3 text-muted">"We reached out to Terhide when we were about to start.
 He handled our graphics designs and created our website and ran promotions for us. 
 The calls were too much that we were begging him to stop the ads. His job is super amazing."</p>
-                                        <span class="d-block font-weight-bold text-dark mt-3">Benjamin Idoko<small class="text-muted"> CEO/MD - ODK Farm</small></span>
+                                        <span class="d-block font-weight-bold text-dark mt-3"> Odaikwu Idoko,<small class="text-muted"> CEO/MD - ODK Farm</small></span>
                                     </div></div><div class="owl-item cloned" style="width: 490px; margin-right: 30px;"><div class="testimonial-item box-border" style="text-align: justify; line-height:1.2;"> 
                         </div>
                     </div>
@@ -1239,7 +1239,7 @@ The calls were too much that we were begging him to stop the ads. His job is sup
                                         <ul class="list-inline mt-4">
                                             <li class="list-inline-item">
                                                 <i class="lni-calendar data-text-color" data-color="#ff4274" style="color: rgb(255, 66, 116);"></i>
-                                                <span class="text-muted">July 01, 2021 </span>
+                                                <span class="text-muted">July 23, 2021 </span>
                                             </li>
                                             <li class="list-inline-item">
                                                 <i class="lni-calendar data-text-color" data-color="#fbdd62" style="color: rgb(251, 221, 98);"></i>
