--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
 
 
 
+<!-- FontAwesome Css -->
+<link rel="stylesheet" href="./css/font-awesome.min.css">
 <!-- Line icon Css -->
 <link rel="stylesheet" href="./css/LineIcons.css">
 <!-- Bootstrap Css -->
