--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@
                                                             </div>
                                                             <div class="comment-content">
                                                                 <div class="comment-author">
-                                                                    <span>Benjamin ODK</span>
+                                                                    <span>Odaikwu Idoko</span>
                                                                     <p class="text-muted comment-date">July 25, 2021 at 9:32 am</p>
                                                                     <a href="#" class="comment-reply-link"><i class="fa fa-reply"></i> Reply</a>
                                                                 </div>
