--- a/index.html
+++ b/index.html
@@ -311,10 +311,10 @@
                 <span>Follow Me</span>
             </div>
             <div class="social">
-                <a href="https://www.facebook.com/tyavyar.lazarus"><i class="fa fa-facebook"></i></a>
-                <a href="https://twitter.com/iam_ogizzy"><i class="fa fa-twitter"></i></a>
-                <a href="https://www.instagram.com/iamogizzy/"><i class="fa fa-instagram"></i></a>
-                <a href="https://www.linkedin.com/in/terhide-tyavyar-jnr-5671b5125/"><i class="fa fa-linkedin"></i></a>
+                <a href="https://www.facebook.com/tyavyar.lazarus" style="color: black;"><i class="fa fa-facebook"></i></a>
+                <a href="https://twitter.com/iam_ogizzy" style="color: black;"><i class="fa fa-twitter"></i></a>
+                <a href="https://www.instagram.com/iamogizzy/" style="color: black;" ><i class="fa fa-instagram"></i></a>
+                <a href="https://www.linkedin.com/in/terhide-tyavyar-jnr-5671b5125/" style="color: black;" ><i class="fa fa-linkedin"></i></a>
 
             </div>
         </div>
