--- a/index.html
+++ b/index.html
@@ -1334,6 +1334,7 @@ The calls were too much that we were begging him to stop the ads. His job is sup
                                 </div>
                                 <div class="title-content">
                                     <h2 class="base-color">Get In Touch</h2>
+<p>Feel free to get in touch with me to discuss any work requirements you might have.</p>
                                 </div>
                             </div>
                         </div>
