--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <link href="./css/css2(1).css" rel="stylesheet">  
 
 
-
+<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.7/css/all.css">
 <!-- Line icon Css -->
 <link rel="stylesheet" href="./css/LineIcons.css">
 <!-- Bootstrap Css -->
