--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <link href="./css/css2.css " rel="stylesheet">
 <link href="./css/css2(1).css" rel="stylesheet">  
 
-
+<!-- FontAwesome Css -->
 <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.7/css/all.css">
 <!-- Line icon Css -->
 <link rel="stylesheet" href="./css/LineIcons.css">
