--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <link href="./css/css2(1).css" rel="stylesheet">  
 
 <!-- FontAwesome Css -->
-<link rel="stylesheet" href="./font-awesome.css">
+<link rel="stylesheet" href="./css/font-awesome.min.css">
 <!-- Line icon Css -->
 <link rel="stylesheet" href="./css/LineIcons.css">
 <!-- Bootstrap Css -->
