--- a/index.html
+++ b/index.html
@@ -309,6 +309,9 @@
                 <span>Follow Me</span>
             </div>
             <div class="social">
+​<​a​ ​class​="​btn btn-social-icon btn-twitter​"​>​
+  ​<​span​ ​class​="​fa fa-twitter​"​>​</​span​>​
+​</​a​>
                 <a href="https://www.facebook.com/tyavyar.lazarus" style="color: black;"><i class="fa fa-facebook"></i></a>
                 <a href="https://twitter.com/iam_ogizzy" style="color: black;"><i class="fa fa-twitter"></i></a>
                 <a href="https://www.instagram.com/iamogizzy/" style="color: black;" ><i class="fa fa-instagram"></i></a>
