--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 <link href="./css/css2(1).css" rel="stylesheet">  
 
 <!-- FontAwesome Css -->
+<link rel = "stylesheet" href = "http://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
 <link rel="stylesheet" href="./css/font-awesome.min.css">
 <!-- Line icon Css -->
 <link rel="stylesheet" href="./css/LineIcons.css">
