--- a/index.html
+++ b/index.html
@@ -1097,7 +1097,7 @@
                         <div class="row mt-4">
                             <div class="col-12 text-center pt-2">
                                 <div class="button-border d-inline-block">
-                                    <a href="#" class="pill-button">View More Works</a>
+                                    <a href="https://www.behance.net/iamogizzy9b47" class="pill-button">View More Works</a>
                                 </div>
                             </div>
                         </div>
