--- a/index.html
+++ b/index.html
@@ -18,6 +18,10 @@
 <link href="./css/css2.css " rel="stylesheet">
 <link href="./css/css2(1).css" rel="stylesheet">  
 
+<!-- Add icon library -->
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
+
 <!-- FontAwesome Css -->
 <link rel = "stylesheet" href = "http://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
 <link rel="stylesheet" href="./css/font-awesome.min.css">
