--- a/index.html
+++ b/index.html
@@ -388,7 +388,7 @@
                                 <div class="hero-content">
                                     <h1 class="dark-color mb-3">I'M <span class="base-color">Tyavyar Terhide</span></h1>
                                     <h4 class="text-darktext-capitalize mb-0"><span class="base-color">A  </span> <span class="element" data-elements="Web Designer, Web Developer, UI/UX Designer, Graphics Designer, Javascript Programmer, Database Administrator, Geographer">Designer</span><span class="typed-cursor">|</span></h4>
-                                    <p class="text-muted my-4">I'm currently working as a Web Developer, UI UX / Graphics Designer at <a href="https://www.gamintcorporateltd.com/">Gamint Corporate Ltd</a> I have spent the past years at agencies,
+                                    <p class="text-muted my-4">I'm currently working as a Web Developer, UI/UX Designer at <a href="https://www.gamintcorporateltd.com/">Gamint Corporate Ltd</a> I have spent the past years at agencies,
                                         start-ups and freelancing, designing and building scalable applications.</p>
                                     <div class="button-border mt-2">
                                         <a target="_blank" href="mycv/terhide cv.pdf" class="pill-button">My Resume</a>
