--- a/index.html
+++ b/index.html
@@ -461,10 +461,10 @@
                                             <ul class="list-unstyled pt-4">
 
                                                 <li>
-                                                    <p>Degree : <span> B.Sc. Geography</span></p>
+                                                    <p>Degree : <span> B.Sc. GIS</span></p>
                                                 </li>
                                                 <li>
-                                                    <p>Mail : <span> <a href="#" class="__cf_email__">hello@terhide.com</a></span></p>
+                                                    <p>Mail : <span> <a href="#" class="__cf_email__">iamogizzy@gmail.com</a></span></p>
                                                 </li>
                                                 <li>
                                                     <p>Job : <span> <a href="https://www.gamintcorporateltd.com/" target="_blank"> Gamint Corportate Ltd</a></span></p>
@@ -564,11 +564,11 @@
                                         <div class="timeline-icon data-background" data-color="#ff5380" style="background-color: rgb(255, 83, 128);"></div>
                                         <div class="timeline-contents">
                                             <div class="time-line-header">
-                                                <h6 class="timeline-title"><strong>B.Sc. Geography</h6></strong>
+                                                <h6 class="timeline-title"><strong>B.Sc. GIS </h6></strong>
                                                 <p class="timeline-year">2014 - 2019</p>
                                             </div>
                                             <div class="timeline-content">
-                                                <p>Graduated with a Second Class in B.Sc. Geography from Benue State University, Makurdi-Nigeria</p>
+                                                <p>Graduated with a Second Class in B.Sc. GIS from Benue State University, Makurdi-Nigeria</p>
                                             </div>
                                         </div>
                                     </div>
@@ -581,7 +581,7 @@
                                                 <p class="timeline-year">2009 - 2010</p>
                                             </div>
                                             <div class="timeline-content">
-                                                <p>I obtained Diploma in Web Development at Kenyloy Computer Training Institute.</p>
+                                                <p>I obtained Diploma in Web Development at Kenyloy CTI.</p>
                                             </div>
                                         </div>
                                     </div>
@@ -612,7 +612,7 @@
                                         <div class="timeline-icon data-background" data-color="#ff5380" style="background-color: rgb(255, 83, 128);"></div>
                                         <div class="timeline-contents">
                                             <div class="time-line-header">
-                                                <h6 class="timeline-title">Gamint Corporate Ltd</h6> <small>Web Developer / Graphics Designer</small>
+                                                <h6 class="timeline-title">Gamint Corporate Ltd</h6> <small>Web Developer / UI UX Designer</small>
                                                 <p class="timeline-year">2020 - Present (Remote)</p>
                                             </div>
                                             <!--
@@ -644,7 +644,7 @@
                                         <div class="timeline-contents">
                                             <div class="time-line-header">
                                                 <h6 class="timeline-title">Bestmint Global Resources & Technologies</h6>
-                                                <small>Web Developer / Graphics Designer</small>
+                                                <small>Web Developer / UI UX Designer</small>
                                                 <p class="timeline-year">2014 - 2016 (Part Time)</p>
                                             </div>
                                             <!--
@@ -686,22 +686,22 @@
                                         <div class="col-lg-6">
                                             <div class="skill-box">
                                                 <div class="skillbar clearfix" data-percent="90%">
-                                                    <div class="skillbar-title"><span>HTML / CSS</span></div>
+                                                    <div class="skillbar-title"><span>HTML | CSS</span></div>
                                                     <div class="skillbar-bar fill-skillbar data-background" data-color="#ff5380" style="background-color: rgb(255, 83, 128); width: 85%;"></div>
                                                     <div class="skill-bar-percent"></div>
                                                 </div>
                                                 <div class="skillbar clearfix " data-percent="90%">
-                                                    <div class="skillbar-title"><span>React Js</span></div>
+                                                    <div class="skillbar-title"><span> PHPH | PHP Laravel</span></div>
                                                     <div class="skillbar-bar fill-skillbar data-background" data-color="#fbdd62" style="background-color: rgb(251, 221, 98); width: 85%;"></div>
                                                     <div class="skill-bar-percent"></div>
                                                 </div>
                                                 <div class="skillbar clearfix" data-percent="90%">
-                                                    <div class="skillbar-title"><span>JavaScript</span></div>
+                                                    <div class="skillbar-title"><span>JavaScript | React Js </span></div>
                                                     <div class="skillbar-bar fill-skillbar data-background" data-color="#0bceaf" style="background-color: rgb(11, 206, 175); width: 70%;"></div>
                                                     <div class="skill-bar-percent"></div>
                                                 </div>
                                                 <div class="skillbar clearfix" data-percent="90%">
-                                                    <div class="skillbar-title"><span>Angular / Vue / Flutter</span></div>
+                                                    <div class="skillbar-title"><span>Angular | Vue </span></div>
                                                     <div class="skillbar-bar fill-skillbar data-background" data-color="#0bceaf" style="background-color: rgb(11, 206, 175); width: 75%;"></div>
                                                     <div class="skill-bar-percent"></div>
                                                 </div>
