--- a/index.html
+++ b/index.html
@@ -391,7 +391,7 @@
                                     <p class="text-muted my-4">I'm currently working as a Web Developer, UI / UX Designer at <a href="https://www.gamintcorporateltd.com/">Gamint Corporate Ltd</a> I have spent the past years at agencies,
                                         start-ups and freelancing, designing and building scalable applications.</p>
                                     <div class="button-border mt-2">
-                                        <a target="_blank" href="mycv/terhide cv.pdf" class="pill-button">My Resume</a>
+                                        <a target="_blank" href="mycv/Terhide Marcel Tyavyar CV.pdf" class="pill-button">My Resume</a>
                                     </div>
                                 </div>
                             </div>
