--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
         
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <title>Terhide Tyavyar - Portfolio</title>
-        <meta name="description" content="">
+        <meta name="description" content="Terhide Tyavyar Jnr Profile">
         <meta name="keywords" content="">
         <meta name="author" content="Terhide Tyavyar Jnr.">
        
@@ -386,7 +386,7 @@
                         <div class="row align-items-center">
                             <div class="col-lg-6 order-2 order-lg-1">
                                 <div class="hero-content">
-                                    <h1 class="dark-color mb-3">I'M <span class="base-color">Tyavyar Terhide</span></h1>
+                                    <h1 class="dark-color mb-3">I'M <span class="base-color"> Terhide Tyavyar </span></h1>
                                     <h4 class="text-darktext-capitalize mb-0"><span class="base-color">A  </span> <span class="element" data-elements="Web Designer, Web Developer, PHP Laravel Developer, Javascript Programmer, Database Administrator, UI/UX Designer, Graphics Designer">Designer</span><span class="typed-cursor">|</span></h4>
                                     <p class="text-muted my-4">I'm currently working as a Web Developer, UI / UX Designer at <a href="https://www.gamintcorporateltd.com/">Gamint Corporate Ltd</a> I have spent the past years at agencies,
                                         start-ups and freelancing, designing and building scalable applications.</p>
@@ -461,7 +461,7 @@
                                             <ul class="list-unstyled pt-4">
 
                                                 <li>
-                                                    <p>Degree : <span> B.Sc. GIS</span></p>
+                                                    <p>Degree : <span> Bachelor of Science Degree</span></p>
                                                 </li>
                                                 <li>
                                                     <p>Mail : <span> <a href="#" class="__cf_email__">iamogizzy@gmail.com</a></span></p>
@@ -564,11 +564,11 @@
                                         <div class="timeline-icon data-background" data-color="#ff5380" style="background-color: rgb(255, 83, 128);"></div>
                                         <div class="timeline-contents">
                                             <div class="time-line-header">
-                                                <h6 class="timeline-title"><strong>B.Sc. GIS </h6></strong>
+                                                <h6 class="timeline-title"><strong> Bachelor of Science Degree </h6></strong>
                                                 <p class="timeline-year">2014 - 2019</p>
                                             </div>
                                             <div class="timeline-content">
-                                                <p>Graduated with a Second Class in B.Sc. GIS from Benue State University, Makurdi-Nigeria</p>
+                                                <p>Graduated from Benue State University, Makurdi-Nigeria</p>
                                             </div>
                                         </div>
                                     </div>
@@ -1371,7 +1371,7 @@ The calls were too much that we were begging him to stop the ads. His job is sup
                                     </div>
                                     <div class="mt-3">
                                         <h5 class="text-dark mb-0">Email Me At</h5>
-                                        <small class="text-muted"><a href="#" class="__cf_email__">hello@terhide.com</a></small>
+                                        <small class="text-muted"><a href="#" class="__cf_email__"> iamogizzy@gmail.com / hello@terhide.com</a></small>
                                     </div>
                                 </div>
                             </div>
@@ -1418,7 +1418,7 @@ The calls were too much that we were begging him to stop the ads. His job is sup
                         </div>
                         <div class="row copy-right">
                             <div class="col-12 text-center text-dark">
-                                <p>Copyright © 2021. Tyavyar <span class="base-color">Terhide</span></p>
+                                <p>Copyright © 2023. Terhide <span class="base-color">Tyavyar Jnr.</span></p>
                             </div>
                         </div>
                     </div>
