--- a/index.html
+++ b/index.html
@@ -691,7 +691,7 @@
                                                     <div class="skill-bar-percent"></div>
                                                 </div>
                                                 <div class="skillbar clearfix " data-percent="90%">
-                                                    <div class="skillbar-title"><span> PHPH | PHP Laravel</span></div>
+                                                    <div class="skillbar-title"><span> PHP | PHP Laravel</span></div>
                                                     <div class="skillbar-bar fill-skillbar data-background" data-color="#fbdd62" style="background-color: rgb(251, 221, 98); width: 85%;"></div>
                                                     <div class="skill-bar-percent"></div>
                                                 </div>
