--- a/index.html
+++ b/index.html
@@ -1360,7 +1360,7 @@ The calls were too much that we were begging him to stop the ads. His job is sup
                                     </div>
                                     <div class="mt-3">
                                         <h5 class="text-dark mb-0 contact_detail-title">Address</h5>
-                                        <small class="text-muted">Makurdi / Gboko, Benue State, Nigeria</small>
+                                        <small class="text-muted"> Benue State, Nigeria</small>
                                     </div>
                                 </div>
                             </div>
