--- a/index.html
+++ b/index.html
@@ -360,7 +360,7 @@
                                 <li class="list-group-item"><span>Contact Info :</span></li>
                                 <li class="list-group-item"><span><i class="lni-map-marker"></i> No 9 Damjor Street, Gboko, Benue State, Nigeria</span></li>
                                 <li class="list-group-item"><span><i class="lni-phone-handset"></i> +234 8038404736</span></li>
-                                <li class="list-group-item"><span><i class="lni-envelope"></i> <a href="#" class="__cf_email__">hello@terhide.com</a></span></li>
+                                <li class="list-group-item"><span><i class="lni-envelope"></i> <a href="#" class="__cf_email__">iamogizzy@gmail.com</a></span></li>
                                 <li class="list-group-item"><span>Follow me :</span></li>
                                 <li class="list-group-item">
                                     <ul class="list-inline socails">
@@ -1371,7 +1371,7 @@ The calls were too much that we were begging him to stop the ads. His job is sup
                                     </div>
                                     <div class="mt-3">
                                         <h5 class="text-dark mb-0">Email Me At</h5>
-                                        <small class="text-muted"><a href="#" class="__cf_email__"> iamogizzy@gmail.com / hello@terhide.com</a></small>
+                                        <small class="text-muted"><a href="#" class="__cf_email__"> iamogizzy@gmail.com </a></small>
                                     </div>
                                 </div>
                             </div>
