--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         
 
         <!--  FavIcon  -->
-        <link rel="shortcut icon" href="https://retrina.com/demo/arshia/pilling-parallax/assets/img/favicon.ico">
+        <link rel="shortcut icon" href="https://images/about-og2.jpg">
 
        <!-- Google Fonts -->
 <link href="./css/css.css" rel="stylesheet">
@@ -477,7 +477,7 @@
                                     </div>
                                 </div>
                                 <div class="button-border mt-3 mb-lg-0 mr-4">
-                                    <a target="_blank" href="mycv/terhide cv.pdf" class="pill-button">My Resume</a>
+                                    <a target="_blank" href="mycv/Marcel Terhide Tyavyar CV.pdf" class="pill-button">My Resume</a>
                                 </div>
                                 <div class="button-border mt-3 mb-lg-0 to-contact">
                                     <a href="#contact" class="pill-button">Hire Me</a>
