--- a/index.html
+++ b/index.html
@@ -467,7 +467,7 @@
                                                     <p>Mail : <span> <a href="#" class="__cf_email__">iamogizzy@gmail.com</a></span></p>
                                                 </li>
                                                 <li>
-                                                    <p>Job : <span> <a href="https://www.bdic.ng/" target="_blank"> Benue Digital Infrastructure Company Plc (BDIC)</a></span></p>
+                                                    <p>Job : <span> <a href="https://www.bdic.ng/" target="_blank"> BDIC</a></span></p>
                                                 </li>
                                                 <li>
                                                     <p>Freelance : <span> Available</span></p>
