--- a/index.html
+++ b/index.html
@@ -326,7 +326,7 @@
         <header>
             <div class="logo-area">
                 <a href="#hero" class="logo">
-                    <span>Tyavyar <span class="base-color">Terhide</span></span>
+                    <span>Terhide <span class="base-color">Tyavyar</span></span>
                 </a>
             </div>
             <div class="header-info-area">
