--- a/index.html
+++ b/index.html
@@ -439,7 +439,7 @@
                             </div>
                             <div class="col-lg-6 mt-4 mt-lg-0">
                                 <div class="personal-item ">
-                                    <h3 class="text-dark mt-4 mt-lg-0"><span class="base-color">Full-stack</span> Web Developer</h3>
+                                    <h3 class="text-dark mt-4 mt-lg-0"><span class="base-color">Full Stack</span> Web Developer</h3>
                                     <div class="row">
                                         <div class="col-6 personal-info">
                                             <ul class="list-unstyled pt-4">
